--- a/IPL Score Predictor.ipynb
+++ b/IPL Score Predictor.ipynb
@@ -248,7 +248,9 @@
     }
    ],
    "source": [
-    "sns.countplot(data=df,x=\"wickets_last_5\")"
+    "sns.countplot(data=df,x=\"runs_last_5\")\n",
+    "sns.countplot(data=df,x=\"wickets_last_5\")\n",
+    "sns.countplot(data=df,x=\"runs\")"
    ]
   },
   {
@@ -372,7 +374,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Removing unwanted columns\n",
+    "\n",
     "\n",
     "columns_to_remove = ['mid', 'venue', 'batsman', 'bowler', 'non-striker']\n",
     "df.drop(labels=columns_to_remove, axis=1, inplace=True)"
@@ -934,10 +936,7 @@
     }
    ],
    "source": [
-    "# Calculate the prediction errors\n",
     "errors = y_test - model_prediction\n",
-    "\n",
-    "# Create the prediction error plot\n",
     "plt.scatter(y_test, errors)\n",
     "plt.axhline(y=0, color='r', linestyle='-')\n",
     "plt.xlabel('Actual values')\n",
@@ -951,7 +950,19 @@
    "id": "a951916e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
+    "X = selected_features\n",
+    "y = data['total']\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "model = LinearRegression()\n",
+    "model.fit(X_train, y_train)\n",
+    "predictions = model.predict(X_test)\n",
+    "mae = mean_absolute_error(y_test, predictions)\n",
+    "mse = mean_squared_error(y_test, predictions)\n"
+   ]
   }
  ],
  "metadata": {
